# trading-bot

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  run-bot  vercel.json
api/: index.py
data/: earnings.sqlite
deploy/server/: bootstrap.sh  healthcheck.sh  install-systemd.sh  run-service.sh  update.sh
docs/: WORKLOG_2026-04-06.md
examples/: news_events.json  social_posts.json  structured_events.json
logs/: news_shock.jsonl
src/trading_bot/: backtest.py  bot.py  cli.py  config.py  dashboard.py  domain.py  earnings_bot.py  earnings_provider.py  event_feed.py  notifications.py  official_feeds.py  persistence.py  risk.py  runtime_state.py  serverless.py  state_store.py  strategy.py  surprise_provider.py  telegram_chat.py  webhook_bridge.py  webhook_utils.py  x_stream.py  x_webhooks.py
src/trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/trading_bot/adapters/: __init__.py  alpaca.py  saxo.py
supabase/: schema.sql
tests/: test_alpaca_adapter.py  test_backtest.py  test_config.py  test_dashboard.py  test_earnings.py  test_event_feed.py  test_notifications.py  test_risk.py  test_saxo_adapter.py  test_serverless.py  test_strategy.py  test_surprise_provider_x.py  test_telegram_chat.py  test_webhook_bridge.py  test_webhook_utils.py  test_x_stream.py
